// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  padding: 56px;
  padding-top: 32px;
  margin-left: auto;
  margin-right: auto;
  width: 100%;
}

.c9 {
  box-sizing: border-box;
  max-width: 600px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c14 {
  box-sizing: border-box;
  text-align: center;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: #9F85FF;
  color: #000000;
  border-color: transparent;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 224px;
  text-transform: none;
}

.c15:focus-visible,
.teleport-button__force-focus-visible .c15 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c15:hover,
.teleport-button__force-hover .c15 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c15:active,
.teleport-button__force-active .c15 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c15:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  margin-left: 24px;
  width: 224px;
  text-transform: none;
}

.c16:focus-visible,
.teleport-button__force-focus-visible .c16 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c16:hover,
.teleport-button__force-hover .c16 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c16:active,
.teleport-button__force-active .c16 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c16:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c11 {
  display: block;
  outline: none;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 24px;
  height: 160px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 8px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-size: 14px;
  font-weight: 400;
}

.c1 {
  display: flex;
}

.c3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c4 {
  flex-shrink: 0;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
  align-items: center;
}

.c6 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c0 c3 c4"
    >
      <h1
        class="c5 c6"
      >
        Servers
      </h1>
    </div>
    <div
      class="c7 c8 sc-gEvDqW c7"
      width="100%"
    >
      <div
        class="c9"
      >
        <div
          class="c10"
        >
          <img
            class="c11"
            height="160px"
            src="file_stub"
          />
          <h1
            class="c12"
          >
            Add your first server to Teleport
          </h1>
          <div
            class="c13"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Server Access consolidates SSH access across all environments.
          </div>
        </div>
        <div
          class="c14"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c15"
              fill="filled"
              width="224px"
            >
              Add Resource
            </button>
          </a>
          <a
            class="c16"
            fill="border"
            href="https://goteleport.com/docs/server-access/getting-started/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            View Documentation
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed 1`] = `
.c7 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #FF6257;
  color: #000000;
}

.c7 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  width: 100%;
}

.c15 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c25 {
  box-sizing: border-box;
  margin-right: 8px;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c38 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c36 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c36:focus-visible,
.teleport-button__force-focus-visible .c36 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c36:hover,
.teleport-button__force-hover .c36 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c36:active,
.teleport-button__force-active .c36 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c36:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c29 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
  margin-right: 0;
}

.c29:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c29:not(:disabled):hover,
.c29:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c29:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c31 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
}

.c31:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c31:not(:disabled):hover,
.c31:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c31:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c37 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.72);
  margin-left: 4px;
}

.c34 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  font-weight: 500;
}

.c1 {
  display: flex;
}

.c3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  display: flex;
  align-items: center;
  gap: 8px;
}

.c26 {
  display: flex;
  justify-content: flex-end;
}

.c33 {
  display: flex;
  flex-wrap: wrap;
}

.c17 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c17[disabled] {
  cursor: default;
}

.c20 {
  width: 32px;
  height: 16px;
  border-radius: 10px;
  cursor: inherit;
  flex-shrink: 0;
  background: rgba(255,255,255,0.07);
  transition: background 0.15s ease-in-out;
}

.c20:hover {
  background: rgba(255,255,255,0.13);
}

.c20:active {
  background: rgba(255,255,255,0.18);
}

.c20:before {
  content: '';
  position: absolute;
  top: 50%;
  width: 12px;
  height: 12px;
  transform: translate(2px, -50%);
  border-radius: 14px;
  background: #FFFFFF;
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
  transition: transform 0.05s ease-in;
}

.c18 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
  z-index: -1;
}

.c18:checked+.c19:before {
  transform: translate(18px, -50%);
}

.c18:enabled:checked+.c19 {
  background: #00BFA6;
}

.c18:enabled:checked+.c19:hover {
  background: #33CCB8;
}

.c18:enabled:checked+.c19:active {
  background: #66D9CA;
}

.c18:disabled+.c19 {
  background: rgba(255,255,255,0.07);
}

.c18:disabled+.c19:before {
  opacity: 0.36;
  box-shadow: none;
}

.c18:disabled:checked+.c19 {
  background: rgba(0, 191, 166, 0.25);
}

.c4 {
  flex-shrink: 0;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
  align-items: center;
}

.c6 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c32 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c32>thead>tr>th,
.c32>tbody>tr>th,
.c32>tfoot>tr>th,
.c32>thead>tr>td,
.c32>tbody>tr>td,
.c32>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c32>thead>tr>th:first-child,
.c32>tbody>tr>th:first-child,
.c32>tfoot>tr>th:first-child,
.c32>thead>tr>td:first-child,
.c32>tbody>tr>td:first-child,
.c32>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c32>thead>tr>th:last-child,
.c32>tbody>tr>th:last-child,
.c32>tfoot>tr>th:last-child,
.c32>thead>tr>td:last-child,
.c32>tbody>tr>td:last-child,
.c32>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c32>tbody>tr>td {
  vertical-align: middle;
}

.c32>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c32>thead>tr>th svg {
  height: 12px;
}

.c32>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c32 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c32 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c32 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c32 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c8 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 0 0 16px 0;
  max-height: 40px;
  margin-top: 4px;
}

.c35 {
  cursor: pointer;
}

.c35:hover {
  background-color: rgba(255,255,255,0.13);
}

.c30 svg {
  font-size: 20px;
}

.c30 svg:before {
  padding-left: 1px;
}

.c28 {
  flex-shrink: 1;
  flex-grow: 0;
  flex-basis: 0;
}

.c14 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c10 {
  border-radius: 200px;
  width: 100%;
  height: 48px;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 16px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

.c24 {
  height: 18px;
  width: 18px;
  color: inherit;
}

.c22 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c22:hover {
  cursor: pointer;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c0 c3 c4"
  >
    <h1
      class="c5 c6"
    >
      Servers
    </h1>
  </div>
  <div
    class="c7"
    kind="danger"
  >
    <div>
      some error message
    </div>
  </div>
  <nav
    class="c8"
  >
    <form
      class="c9 c3"
      width="100%"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <input
            class="c12"
            placeholder="Search..."
            value=""
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15 c16"
              >
                <label
                  class="c17"
                >
                  <input
                    class="c18"
                    data-testid="toggle"
                    type="checkbox"
                  />
                  <div
                    class="c19 c20"
                  />
                </label>
                <div
                  class="c21"
                >
                  Advanced
                </div>
                <span
                  class="c22"
                  role="icon"
                >
                  <span
                    class="c23 c24"
                  >
                    <svg
                      fill="currentColor"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                    >
                      <path
                        d="M11.625 8.8125C12.1428 8.8125 12.5625 8.39277 12.5625 7.875C12.5625 7.35723 12.1428 6.9375 11.625 6.9375C11.1072 6.9375 10.6875 7.35723 10.6875 7.875C10.6875 8.39277 11.1072 8.8125 11.625 8.8125Z"
                      />
                      <path
                        d="M10.5 11.25C10.5 10.8358 10.8358 10.5 11.25 10.5C11.6478 10.5 12.0294 10.658 12.3107 10.9393C12.592 11.2206 12.75 11.6022 12.75 12V15.75C13.1642 15.75 13.5 16.0858 13.5 16.5C13.5 16.9142 13.1642 17.25 12.75 17.25C12.3522 17.25 11.9706 17.092 11.6893 16.8107C11.408 16.5294 11.25 16.1478 11.25 15.75V12C10.8358 12 10.5 11.6642 10.5 11.25Z"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c25 c26"
      >
        <div
          class="c27"
          font-weight="500"
          style="white-space: nowrap; letter-spacing: 0.15px;"
        >
          Showing 
          <strong>
            1
          </strong>
           - 
          <strong>
            7
          </strong>
           of
           
          <strong>
            7
          </strong>
        </div>
      </div>
    </form>
    <div
      class="c9 c26 c28"
      width="100%"
    >
      <div
        class="c0 c1"
      >
        <button
          class="c29 c30"
          title="Previous page"
        >
          <span
            class="c23 icon icon-circlearrowleft"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
              />
              <path
                clip-rule="evenodd"
                d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="c31 c30"
          title="Next page"
        >
          <span
            class="c23 icon icon-circlearrowright"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </nav>
  <table
    class="c32"
  >
    <thead>
      <tr>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Hostname
            <span
              class="c23 icon icon-chevronup"
              title="sort items asc"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Address
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          fujedu
        </td>
        <td>
          172.10.1.20:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          facuzguv
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          duzsevkig
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          kuhinur
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Vukuron
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default; white-space: nowrap;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ← tunnel
          </span>
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Nerjaeb
        </td>
        <td>
          <span
            style="cursor: default; white-space: nowrap;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ← tunnel
          </span>
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="c38"
  >
    <div
      class="c9 c26 c28"
      width="100%"
    >
      <div
        class="c0 c1"
      >
        <button
          class="c29 c30"
          title="Previous page"
        >
          <span
            class="c23 icon icon-circlearrowleft"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
              />
              <path
                clip-rule="evenodd"
                d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="c31 c30"
          title="Next page"
        >
          <span
            class="c23 icon icon-circlearrowright"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded 1`] = `
.c0 {
  box-sizing: border-box;
}

.c9 {
  box-sizing: border-box;
  width: 100%;
}

.c15 {
  box-sizing: border-box;
  padding-left: 24px;
  padding-right: 24px;
}

.c25 {
  box-sizing: border-box;
  margin-right: 8px;
  margin-bottom: 4px;
  margin-top: 8px;
}

.c38 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c7 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: #9F85FF;
  border-color: #9F85FF;
  border-width: 1.5px;
  padding: 0 30.5px;
  min-height: 32px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
  width: 240px;
}

.c7:focus-visible,
.teleport-button__force-focus-visible .c7 {
  background-color: #9F85FF;
  color: #000000;
  border-color: #000000;
  border-radius: 2px;
  outline: 2px solid #9F85FF;
}

.c7:hover,
.teleport-button__force-hover .c7 {
  background-color: #B29DFF;
  border-color: transparent;
  color: #000000;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.20),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}

.c7:active,
.teleport-button__force-active .c7 {
  background-color: #C5B6FF;
  border-color: transparent;
  color: #000000;
}

.c7:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c36 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border-style: solid;
  border-color: transparent;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  transition: background-color 0.1s,border-color 0.1s,outline-color 0.1s,box-shadow 0.1s;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  color: rgba(255, 255, 255, 0.54);
  border-color: rgba(255, 255, 255, 0.54);
  border-width: 1.5px;
  padding: 0 6.5px;
  min-height: 24px;
  font-size: 12px;
  line-height: 16px;
  letter-spacing: 0.15px;
}

.c36:focus-visible,
.teleport-button__force-focus-visible .c36 {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.72);
  border-color: rgba(255, 255, 255, 0.72);
  border-radius: 4px;
  outline: none;
}

.c36:hover,
.teleport-button__force-hover .c36 {
  background-color: rgba(255,255,255,0.13);
  border-color: transparent;
  color: #FFFFFF;
  box-shadow: none;
}

.c36:active,
.teleport-button__force-active .c36 {
  background-color: rgba(255,255,255,0.18);
  border-color: transparent;
  color: #FFFFFF;
}

.c36:disabled {
  background-color: rgba(255,255,255,0.07);
  color: rgba(255, 255, 255, 0.3);
  border-color: transparent;
  box-shadow: none;
  cursor: auto;
}

.c29 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
  margin-right: 0;
}

.c29:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c29:not(:disabled):hover,
.c29:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c29:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c31 {
  align-items: center;
  border: none;
  cursor: pointer;
  display: flex;
  outline: none;
  border-radius: 50%;
  overflow: visible;
  justify-content: center;
  text-align: center;
  flex: 0 0 auto;
  background: transparent;
  color: inherit;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  font-size: 16px;
  height: 32px;
  width: 32px;
  margin-left: 0;
}

.c31:disabled {
  color: rgba(255, 255, 255, 0.36);
  cursor: default;
}

.c31:not(:disabled):hover,
.c31:not(:disabled):focus {
  background: rgba(255,255,255,0.13);
}

.c31:not(:disabled):active {
  background: rgba(255,255,255,0.18);
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
}

.c37 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.72);
  margin-left: 4px;
}

.c34 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  font-weight: 500;
}

.c1 {
  display: flex;
}

.c3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c16 {
  display: flex;
  align-items: center;
  gap: 8px;
}

.c26 {
  display: flex;
  justify-content: flex-end;
}

.c33 {
  display: flex;
  flex-wrap: wrap;
}

.c17 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c17[disabled] {
  cursor: default;
}

.c20 {
  width: 32px;
  height: 16px;
  border-radius: 10px;
  cursor: inherit;
  flex-shrink: 0;
  background: rgba(255,255,255,0.07);
  transition: background 0.15s ease-in-out;
}

.c20:hover {
  background: rgba(255,255,255,0.13);
}

.c20:active {
  background: rgba(255,255,255,0.18);
}

.c20:before {
  content: '';
  position: absolute;
  top: 50%;
  width: 12px;
  height: 12px;
  transform: translate(2px, -50%);
  border-radius: 14px;
  background: #FFFFFF;
  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),0px 1px 1px rgba(0, 0, 0, 0.14),0px 1px 3px rgba(0, 0, 0, 0.12);
  transition: transform 0.05s ease-in;
}

.c18 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
  z-index: -1;
}

.c18:checked+.c19:before {
  transform: translate(18px, -50%);
}

.c18:enabled:checked+.c19 {
  background: #00BFA6;
}

.c18:enabled:checked+.c19:hover {
  background: #33CCB8;
}

.c18:enabled:checked+.c19:active {
  background: #66D9CA;
}

.c18:disabled+.c19 {
  background: rgba(255,255,255,0.07);
}

.c18:disabled+.c19:before {
  opacity: 0.36;
  box-shadow: none;
}

.c18:disabled:checked+.c19 {
  background: rgba(0, 191, 166, 0.25);
}

.c4 {
  flex-shrink: 0;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
  align-items: center;
}

.c6 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c32 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c32>thead>tr>th,
.c32>tbody>tr>th,
.c32>tfoot>tr>th,
.c32>thead>tr>td,
.c32>tbody>tr>td,
.c32>tfoot>tr>td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c32>thead>tr>th:first-child,
.c32>tbody>tr>th:first-child,
.c32>tfoot>tr>th:first-child,
.c32>thead>tr>td:first-child,
.c32>tbody>tr>td:first-child,
.c32>tfoot>tr>td:first-child {
  padding-left: 24px;
}

.c32>thead>tr>th:last-child,
.c32>tbody>tr>th:last-child,
.c32>tfoot>tr>th:last-child,
.c32>thead>tr>td:last-child,
.c32>tbody>tr>td:last-child,
.c32>tfoot>tr>td:last-child {
  padding-right: 24px;
}

.c32>tbody>tr>td {
  vertical-align: middle;
}

.c32>thead>tr>th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c32>thead>tr>th svg {
  height: 12px;
}

.c32>tbody>tr>td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c32 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c32 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c32 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0, 0, 0, 0.12),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 2px 4px -1px rgba(0, 0, 0, 0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c32 tbody tr:hover +tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c8 {
  display: flex;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  padding: 0 0 16px 0;
  max-height: 40px;
  margin-top: 4px;
}

.c35 {
  cursor: pointer;
}

.c35:hover {
  background-color: rgba(255,255,255,0.13);
}

.c30 svg {
  font-size: 20px;
}

.c30 svg:before {
  padding-left: 1px;
}

.c28 {
  flex-shrink: 1;
  flex-grow: 0;
  flex-basis: 0;
}

.c14 {
  position: relative;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 0 200px 200px 0;
}

.c13 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  border-left: 1px solid rgba(255,255,255,0.07);
  border-radius: 0 200px 200px 0;
}

.c11 {
  position: relative;
  display: flex;
  overflow: hidden;
  border-radius: 200px;
  height: 100%;
  background: transparent;
  max-width: 725px;
}

.c10 {
  border-radius: 200px;
  width: 100%;
  height: 48px;
}

.c12 {
  border: none;
  outline: none;
  box-sizing: border-box;
  font-size: 16px;
  width: 100%;
  transition: all 0.2s;
  padding-left: 16px;
  padding-right: 16px;
  color: #FFFFFF;
  background: rgba(255,255,255,0.07);
  padding-right: 184px;
  padding-left: 24px;
}

.c24 {
  height: 18px;
  width: 18px;
  color: inherit;
}

.c22 {
  vertical-align: middle;
  display: inline-block;
  height: 18px;
}

.c22:hover {
  cursor: pointer;
}

<div
  class="c0 c1 c2"
>
  <div
    class="c0 c3 c4"
  >
    <h1
      class="c5 c6"
    >
      Servers
    </h1>
    <a
      href="/web/discover"
      style="text-decoration: none;"
    >
      <button
        class="c7"
        fill="border"
        title=""
        width="240px"
      >
        Add server
      </button>
    </a>
  </div>
  <nav
    class="c8"
  >
    <form
      class="c9 c3"
      width="100%"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <input
            class="c12"
            placeholder="Search..."
            value=""
          />
          <div
            class="c13"
          >
            <div
              class="c14"
            >
              <div
                class="c15 c16"
              >
                <label
                  class="c17"
                >
                  <input
                    class="c18"
                    data-testid="toggle"
                    type="checkbox"
                  />
                  <div
                    class="c19 c20"
                  />
                </label>
                <div
                  class="c21"
                >
                  Advanced
                </div>
                <span
                  class="c22"
                  role="icon"
                >
                  <span
                    class="c23 c24"
                  >
                    <svg
                      fill="currentColor"
                      height="20"
                      viewBox="0 0 24 24"
                      width="20"
                    >
                      <path
                        d="M11.625 8.8125C12.1428 8.8125 12.5625 8.39277 12.5625 7.875C12.5625 7.35723 12.1428 6.9375 11.625 6.9375C11.1072 6.9375 10.6875 7.35723 10.6875 7.875C10.6875 8.39277 11.1072 8.8125 11.625 8.8125Z"
                      />
                      <path
                        d="M10.5 11.25C10.5 10.8358 10.8358 10.5 11.25 10.5C11.6478 10.5 12.0294 10.658 12.3107 10.9393C12.592 11.2206 12.75 11.6022 12.75 12V15.75C13.1642 15.75 13.5 16.0858 13.5 16.5C13.5 16.9142 13.1642 17.25 12.75 17.25C12.3522 17.25 11.9706 17.092 11.6893 16.8107C11.408 16.5294 11.25 16.1478 11.25 15.75V12C10.8358 12 10.5 11.6642 10.5 11.25Z"
                      />
                      <path
                        clip-rule="evenodd"
                        d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c25 c26"
      >
        <div
          class="c27"
          font-weight="500"
          style="white-space: nowrap; letter-spacing: 0.15px;"
        >
          Showing 
          <strong>
            1
          </strong>
           - 
          <strong>
            7
          </strong>
           of
           
          <strong>
            7
          </strong>
        </div>
      </div>
    </form>
    <div
      class="c9 c26 c28"
      width="100%"
    >
      <div
        class="c0 c1"
      >
        <button
          class="c29 c30"
          title="Previous page"
        >
          <span
            class="c23 icon icon-circlearrowleft"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
              />
              <path
                clip-rule="evenodd"
                d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="c31 c30"
          title="Next page"
        >
          <span
            class="c23 icon icon-circlearrowright"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </nav>
  <table
    class="c32"
  >
    <thead>
      <tr>
        <th>
          <a
            style="display: flex; align-items: center;"
          >
            Hostname
            <span
              class="c23 icon icon-chevronup"
              title="sort items asc"
            >
              <svg
                fill="currentColor"
                height="24"
                viewBox="0 0 24 24"
                width="24"
              >
                <path
                  clip-rule="evenodd"
                  d="M11.4697 6.96967C11.7626 6.67678 12.2374 6.67678 12.5303 6.96967L20.0303 14.4697C20.3232 14.7626 20.3232 15.2374 20.0303 15.5303C19.7374 15.8232 19.2626 15.8232 18.9697 15.5303L12 8.56066L5.03033 15.5303C4.73744 15.8232 4.26256 15.8232 3.96967 15.5303C3.67678 15.2374 3.67678 14.7626 3.96967 14.4697L11.4697 6.96967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </a>
        </th>
        <th
          style="cursor: default;"
        >
          Address
        </th>
        <th
          style="cursor: default;"
        >
          Labels
        </th>
        <th
          style="cursor: default;"
        />
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          fujedu
        </td>
        <td>
          172.10.1.20:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          facuzguv
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          duzsevkig
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          kuhinur
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Vukuron
        </td>
        <td>
          172.10.1.1:3022
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          zebpecda
        </td>
        <td>
          <span
            style="cursor: default; white-space: nowrap;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ← tunnel
          </span>
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
      <tr>
        <td>
          Nerjaeb
        </td>
        <td>
          <span
            style="cursor: default; white-space: nowrap;"
            title="This node is connected to cluster through reverse tunnel"
          >
            ← tunnel
          </span>
        </td>
        <td>
          <div
            class="c0 c33"
          >
            <div
              class="c34 c35"
              kind="secondary"
            >
              cluster: one
            </div>
            <div
              class="c34 c35"
              kind="secondary"
            >
              kernel: 4.15.0-51-generic
            </div>
          </div>
        </td>
        <td
          align="right"
        >
          <button
            class="c36"
            fill="border"
          >
            Connect
            <span
              class="c37 icon icon-chevrondown"
              color="text.slightlyMuted"
            >
              <svg
                fill="currentColor"
                height="16"
                viewBox="0 0 24 24"
                width="16"
              >
                <path
                  clip-rule="evenodd"
                  d="M3.96967 8.46967C4.26256 8.17678 4.73744 8.17678 5.03033 8.46967L12 15.4393L18.9697 8.46967C19.2626 8.17678 19.7374 8.17678 20.0303 8.46967C20.3232 8.76256 20.3232 9.23744 20.0303 9.53033L12.5303 17.0303C12.2374 17.3232 11.7626 17.3232 11.4697 17.0303L3.96967 9.53033C3.67678 9.23744 3.67678 8.76256 3.96967 8.46967Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </td>
      </tr>
    </tbody>
  </table>
  <div
    class="c38"
  >
    <div
      class="c9 c26 c28"
      width="100%"
    >
      <div
        class="c0 c1"
      >
        <button
          class="c29 c30"
          title="Previous page"
        >
          <span
            class="c23 icon icon-circlearrowleft"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                d="M10.0607 11.25L11.7803 9.53033C12.0732 9.23744 12.0732 8.76256 11.7803 8.46967C11.4874 8.17678 11.0126 8.17678 10.7197 8.46967L7.71967 11.4697C7.64776 11.5416 7.59351 11.6245 7.55691 11.7129C7.52024 11.8013 7.5 11.8983 7.5 12C7.5 12.1017 7.52024 12.1987 7.55691 12.2871C7.59351 12.3755 7.64776 12.4584 7.71967 12.5303L10.7197 15.5303C11.0126 15.8232 11.4874 15.8232 11.7803 15.5303C12.0732 15.2374 12.0732 14.7626 11.7803 14.4697L10.0607 12.75H15.75C16.1642 12.75 16.5 12.4142 16.5 12C16.5 11.5858 16.1642 11.25 15.75 11.25H10.0607Z"
              />
              <path
                clip-rule="evenodd"
                d="M2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
        <button
          class="c31 c30"
          title="Next page"
        >
          <span
            class="c23 icon icon-circlearrowright"
          >
            <svg
              fill="currentColor"
              height="24"
              viewBox="0 0 24 24"
              width="24"
            >
              <path
                clip-rule="evenodd"
                d="M12 3.75C7.44365 3.75 3.75 7.44365 3.75 12C3.75 16.5563 7.44365 20.25 12 20.25C16.5563 20.25 20.25 16.5563 20.25 12C20.25 7.44365 16.5563 3.75 12 3.75ZM2.25 12C2.25 6.61522 6.61522 2.25 12 2.25C17.3848 2.25 21.75 6.61522 21.75 12C21.75 17.3848 17.3848 21.75 12 21.75C6.61522 21.75 2.25 17.3848 2.25 12ZM7.5 12C7.5 11.5858 7.83579 11.25 8.25 11.25H13.9393L12.2197 9.53033C11.9268 9.23744 11.9268 8.76256 12.2197 8.46967C12.5126 8.17678 12.9874 8.17678 13.2803 8.46967L16.2803 11.4697C16.3522 11.5416 16.4065 11.6245 16.4431 11.7129C16.4798 11.8013 16.5 11.8983 16.5 12C16.5 12.1017 16.4798 12.1987 16.4431 12.2871C16.4065 12.3755 16.3522 12.4584 16.2803 12.5303L13.2803 15.5303C12.9874 15.8232 12.5126 15.8232 12.2197 15.5303C11.9268 15.2374 11.9268 14.7626 12.2197 14.4697L13.9393 12.75H8.25C7.83579 12.75 7.5 12.4142 7.5 12Z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  max-width: 664px;
  padding: 56px;
  margin-left: auto;
  margin-right: auto;
  color: #FFFFFF;
  text-align: center;
  border-radius: 12px;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 500;
  font-size: 24px;
  line-height: 32px;
  margin-bottom: 16px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0;
  font-weight: 600;
}

.c1 {
  display: flex;
}

.c3 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c4 {
  flex-shrink: 0;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  margin-bottom: 24px;
  padding-left: 40px;
  padding-right: 40px;
  align-items: center;
  align-items: center;
}

.c6 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
  padding-left: 40px;
  padding-right: 40px;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c0 c3 c4"
    >
      <h1
        class="c5 c6"
      >
        Servers
      </h1>
    </div>
    <div
      class="c7"
      color="text.main"
    >
      <h1
        class="c8"
      >
        No Servers Found
      </h1>
      <div
        class="c9"
      >
        Either there are no 
        servers
         in the "
        <span
          class="c10"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
